ScenarioCalcParser.py
# Generated from ScenarioCalc.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ScenarioCalcParser ( Parser ):

    grammarFileName = "ScenarioCalc.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'scenario'", "'given'", "'calculate'", 
                     "'report'", "'if'", "'then'", "'else'", "'end'", "'as'", 
                     "'true'", "'false'", "'+'", "'-'", "'*'", "'/'", "'^'", 
                     "'('", "')'", "'{'", "'}'", "';'", "','", "'='", "'=='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'and'", "'or'", 
                     "'not'" ]

    symbolicNames = [ "<INVALID>", "SCENARIO", "GIVEN", "CALCULATE", "REPORT", 
                      "IF", "THEN", "ELSE", "END", "AS", "TRUE", "FALSE", 
                      "PLUS", "MINUS", "STAR", "DIV", "CARET", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA", "ASSIGN", 
                      "EQ", "NEQ", "GT", "LT", "GTE", "LTE", "AND", "OR", 
                      "NOT", "STRING", "NUMBER", "ID", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_scenarioDecl = 1
    RULE_scenarioBody = 2
    RULE_givenBlock = 3
    RULE_calculateBlock = 4
    RULE_reportBlock = 5
    RULE_statement = 6
    RULE_assignment = 7
    RULE_ifStatement = 8
    RULE_reportItem = 9
    RULE_expr = 10
    RULE_expr2 = 11
    RULE_expr3 = 12
    RULE_comparison = 13
    RULE_arithmetic = 14
    RULE_term = 15
    RULE_factor = 16
    RULE_primary = 17

    ruleNames =  [ "program", "scenarioDecl", "scenarioBody", "givenBlock", 
                   "calculateBlock", "reportBlock", "statement", "assignment", 
                   "ifStatement", "reportItem", "expr", "expr2", "expr3", 
                   "comparison", "arithmetic", "term", "factor", "primary" ]

    EOF = Token.EOF
    SCENARIO=1
    GIVEN=2
    CALCULATE=3
    REPORT=4
    IF=5
    THEN=6
    ELSE=7
    END=8
    AS=9
    TRUE=10
    FALSE=11
    PLUS=12
    MINUS=13
    STAR=14
    DIV=15
    CARET=16
    LPAREN=17
    RPAREN=18
    LBRACE=19
    RBRACE=20
    SEMI=21
    COMMA=22
    ASSIGN=23
    EQ=24
    NEQ=25
    GT=26
    LT=27
    GTE=28
    LTE=29
    AND=30
    OR=31
    NOT=32
    STRING=33
    NUMBER=34
    ID=35
    WS=36
    LINE_COMMENT=37
    BLOCK_COMMENT=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ScenarioCalcParser.EOF, 0)

        def scenarioDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScenarioCalcParser.ScenarioDeclContext)
            else:
                return self.getTypedRuleContext(ScenarioCalcParser.ScenarioDeclContext,i)


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ScenarioCalcParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 36
                self.scenarioDecl()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(ScenarioCalcParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScenarioDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCENARIO(self):
            return self.getToken(ScenarioCalcParser.SCENARIO, 0)

        def STRING(self):
            return self.getToken(ScenarioCalcParser.STRING, 0)

        def LBRACE(self):
            return self.getToken(ScenarioCalcParser.LBRACE, 0)

        def scenarioBody(self):
            return self.getTypedRuleContext(ScenarioCalcParser.ScenarioBodyContext,0)


        def RBRACE(self):
            return self.getToken(ScenarioCalcParser.RBRACE, 0)

        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_scenarioDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScenarioDecl" ):
                listener.enterScenarioDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScenarioDecl" ):
                listener.exitScenarioDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScenarioDecl" ):
                return visitor.visitScenarioDecl(self)
            else:
                return visitor.visitChildren(self)




    def scenarioDecl(self):

        localctx = ScenarioCalcParser.ScenarioDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_scenarioDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(ScenarioCalcParser.SCENARIO)
            self.state = 45
            self.match(ScenarioCalcParser.STRING)
            self.state = 46
            self.match(ScenarioCalcParser.LBRACE)
            self.state = 47
            self.scenarioBody()
            self.state = 48
            self.match(ScenarioCalcParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScenarioBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def givenBlock(self):
            return self.getTypedRuleContext(ScenarioCalcParser.GivenBlockContext,0)


        def calculateBlock(self):
            return self.getTypedRuleContext(ScenarioCalcParser.CalculateBlockContext,0)


        def reportBlock(self):
            return self.getTypedRuleContext(ScenarioCalcParser.ReportBlockContext,0)


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_scenarioBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScenarioBody" ):
                listener.enterScenarioBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScenarioBody" ):
                listener.exitScenarioBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScenarioBody" ):
                return visitor.visitScenarioBody(self)
            else:
                return visitor.visitChildren(self)




    def scenarioBody(self):

        localctx = ScenarioCalcParser.ScenarioBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_scenarioBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.givenBlock()
            self.state = 51
            self.calculateBlock()
            self.state = 52
            self.reportBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GivenBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GIVEN(self):
            return self.getToken(ScenarioCalcParser.GIVEN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScenarioCalcParser.StatementContext)
            else:
                return self.getTypedRuleContext(ScenarioCalcParser.StatementContext,i)


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_givenBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGivenBlock" ):
                listener.enterGivenBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGivenBlock" ):
                listener.exitGivenBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGivenBlock" ):
                return visitor.visitGivenBlock(self)
            else:
                return visitor.visitChildren(self)




    def givenBlock(self):

        localctx = ScenarioCalcParser.GivenBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_givenBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(ScenarioCalcParser.GIVEN)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==35:
                self.state = 55
                self.statement()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CalculateBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALCULATE(self):
            return self.getToken(ScenarioCalcParser.CALCULATE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScenarioCalcParser.StatementContext)
            else:
                return self.getTypedRuleContext(ScenarioCalcParser.StatementContext,i)


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_calculateBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCalculateBlock" ):
                listener.enterCalculateBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCalculateBlock" ):
                listener.exitCalculateBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalculateBlock" ):
                return visitor.visitCalculateBlock(self)
            else:
                return visitor.visitChildren(self)




    def calculateBlock(self):

        localctx = ScenarioCalcParser.CalculateBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_calculateBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ScenarioCalcParser.CALCULATE)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==35:
                self.state = 62
                self.statement()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReportBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPORT(self):
            return self.getToken(ScenarioCalcParser.REPORT, 0)

        def reportItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScenarioCalcParser.ReportItemContext)
            else:
                return self.getTypedRuleContext(ScenarioCalcParser.ReportItemContext,i)


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_reportBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReportBlock" ):
                listener.enterReportBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReportBlock" ):
                listener.exitReportBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReportBlock" ):
                return visitor.visitReportBlock(self)
            else:
                return visitor.visitChildren(self)




    def reportBlock(self):

        localctx = ScenarioCalcParser.ReportBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_reportBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ScenarioCalcParser.REPORT)
            self.state = 70 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self.reportItem()
                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==35):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StAssignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScenarioCalcParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(ScenarioCalcParser.AssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStAssign" ):
                listener.enterStAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStAssign" ):
                listener.exitStAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStAssign" ):
                return visitor.visitStAssign(self)
            else:
                return visitor.visitChildren(self)


    class StIfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScenarioCalcParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStatement(self):
            return self.getTypedRuleContext(ScenarioCalcParser.IfStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStIf" ):
                listener.enterStIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStIf" ):
                listener.exitStIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStIf" ):
                return visitor.visitStIf(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = ScenarioCalcParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                localctx = ScenarioCalcParser.StAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.assignment()
                pass
            elif token in [5]:
                localctx = ScenarioCalcParser.StIfContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.ifStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_assignment

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScenarioCalcParser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ScenarioCalcParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(ScenarioCalcParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(ScenarioCalcParser.ExprContext,0)

        def SEMI(self):
            return self.getToken(ScenarioCalcParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def assignment(self):

        localctx = ScenarioCalcParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            localctx = ScenarioCalcParser.AssignContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(ScenarioCalcParser.ID)
            self.state = 79
            self.match(ScenarioCalcParser.ASSIGN)
            self.state = 80
            self.expr(0)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 81
                self.match(ScenarioCalcParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_ifStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStmtContext(IfStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScenarioCalcParser.IfStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(ScenarioCalcParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(ScenarioCalcParser.ExprContext,0)

        def THEN(self):
            return self.getToken(ScenarioCalcParser.THEN, 0)
        def END(self):
            return self.getToken(ScenarioCalcParser.END, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScenarioCalcParser.StatementContext)
            else:
                return self.getTypedRuleContext(ScenarioCalcParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(ScenarioCalcParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)



    def ifStatement(self):

        localctx = ScenarioCalcParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            localctx = ScenarioCalcParser.IfStmtContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(ScenarioCalcParser.IF)
            self.state = 85
            self.expr(0)
            self.state = 86
            self.match(ScenarioCalcParser.THEN)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.statement()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==5 or _la==35):
                    break

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 92
                self.match(ScenarioCalcParser.ELSE)
                self.state = 94 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 93
                    self.statement()
                    self.state = 96 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==5 or _la==35):
                        break



            self.state = 100
            self.match(ScenarioCalcParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReportItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_reportItem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReportItemRuleContext(ReportItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScenarioCalcParser.ReportItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ScenarioCalcParser.ID, 0)
        def AS(self):
            return self.getToken(ScenarioCalcParser.AS, 0)
        def STRING(self):
            return self.getToken(ScenarioCalcParser.STRING, 0)
        def SEMI(self):
            return self.getToken(ScenarioCalcParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReportItemRule" ):
                listener.enterReportItemRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReportItemRule" ):
                listener.exitReportItemRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReportItemRule" ):
                return visitor.visitReportItemRule(self)
            else:
                return visitor.visitChildren(self)



    def reportItem(self):

        localctx = ScenarioCalcParser.ReportItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_reportItem)
        self._la = 0 # Token type
        try:
            localctx = ScenarioCalcParser.ReportItemRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ScenarioCalcParser.ID)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 103
                self.match(ScenarioCalcParser.AS)
                self.state = 104
                self.match(ScenarioCalcParser.STRING)


            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 107
                self.match(ScenarioCalcParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Expr2OnlyContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScenarioCalcParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr2(self):
            return self.getTypedRuleContext(ScenarioCalcParser.Expr2Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr2Only" ):
                listener.enterExpr2Only(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr2Only" ):
                listener.exitExpr2Only(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr2Only" ):
                return visitor.visitExpr2Only(self)
            else:
                return visitor.visitChildren(self)


    class OrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScenarioCalcParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ScenarioCalcParser.ExprContext,0)

        def OR(self):
            return self.getToken(ScenarioCalcParser.OR, 0)
        def expr2(self):
            return self.getTypedRuleContext(ScenarioCalcParser.Expr2Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ScenarioCalcParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = ScenarioCalcParser.Expr2OnlyContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 111
            self.expr2(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ScenarioCalcParser.OrExprContext(self, ScenarioCalcParser.ExprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 113
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 114
                    self.match(ScenarioCalcParser.OR)
                    self.state = 115
                    self.expr2(0) 
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ScenarioCalcParser.RULE_expr2

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AndExprContext(Expr2Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScenarioCalcParser.Expr2Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr2(self):
            return self.getTypedRuleContext(ScenarioCalcParser.Expr2Context,0)

        def AND(self):
            return self.getToken(ScenarioCalcParser.AND, 0)
        def expr3(self):
            return self.getTypedRuleContext(ScenarioCalcParser.Expr3Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)


    class Expr3OnlyContext(Expr2Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScenarioCalcParser.Expr2Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr3(self):
            return self.getTypedRuleContext(ScenarioCalcParser.Expr3Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr3Only" ):
                listener.enterExpr3Only(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr3Only" ):
                listener.exitExpr3Only(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr3Only" ):
                return visitor.visitExpr3Only(self)
            else:
                return visitor.visitChildren(self)


